--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-      <a href="#">WebStudio</a> 
       <nav>
+      <a href="#">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -29,28 +29,29 @@
     </section>
     
     <section>
+        <h2 hidden>Преимущества фирмы</h2>
         <ul>
           <li>
-              <h2>Внимание к деталям</h2>
+              <h3>Внимание к деталям</h3>
               <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>  
           </li>
           <li>
-              <h2>Пунктуальность</h2>
+              <h3>Пунктуальность</h3>
               <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
           <li>
-              <h2>Планирование</h2>
+              <h3>Планирование</h3>
               <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
           <li>
-              <h2>Современные технологии</h2>
+              <h3>Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
     </section>      
     
     <section>
-        <h3>Чем мы занимаемся</h3>
+        <h2>Чем мы занимаемся</h2>
         <ul>
             <li><img 
                   src="./img/box1.jpg" 
@@ -71,7 +72,7 @@
     </section>   
    
     <section>
-        <h4>Наша команда</h4>
+        <h2>Наша команда</h2>
         <ul>
             <li>
                 <img 
@@ -79,7 +80,7 @@
                   alt="фото дизайнера"
                   width="270"
                   />
-                <h4>Игорь Демьяненко</h4>
+                <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
@@ -88,7 +89,7 @@
                   alt="фото разработчика"
                   width="270"
                   />
-                <h4>Ольга Репина</h4>
+                <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
@@ -97,7 +98,7 @@
                   alt="фото маркетолога"
                   width="270"
                   />
-                <h4>Николай Тарасов</h4>
+                <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
@@ -106,7 +107,7 @@
                   alt="фото дизайнера"
                   width="270"
                   />
-                <h4>Михаил Ермаков</h4>
+                <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
